# MGR

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rustfmt.toml
auth/: .env  Cargo.toml  README.md  db-connector.json  docker-compose.yml
auth/application/: Cargo.toml
auth/application/src/: lib.rs
auth/common/: Cargo.toml
auth/common/src/: error.rs  lib.rs
auth/domain/: Cargo.toml
auth/domain/src/: lib.rs
auth/infrastructure/: Cargo.toml
auth/infrastructure/src/: lib.rs
auth/infrastructure/tests/: customer_repository_test.rs  jwt_util_test.rs  redis_test.rs  user_repository_test.rs
auth/interface/: Cargo.toml
auth/interface/src/: lib.rs
auth/logs/: app.log.2024-10-11  app.log.2024-10-17  app.log.2024-10-18  app.log.2024-10-20
auth/migration/src/: m20220101_000001_create_table.rs  m20220101_000002_create_table.rs  m20220101_000003_create_table.rs  m20220101_000004_create_table.rs
auth/settings/: default.toml  development.toml
auth/src/: main.rs
auth/src/api/: auth_handler.rs  mod.rs  server_handler.rs
auth/src/client/: database.rs  kafka.rs  mod.rs  redis.rs
auth/src/configure/: mod.rs
auth/src/constant/: mod.rs
auth/src/middleware/: auth_middleware.rs
auth/src/model/: mod.rs
auth/src/repository/: auth_repository.rs  event_repository.rs  mod.rs
auth/src/router/: auth_router.rs  mod.rs  server.rs  server_router.rs
auth/src/server/: state.rs
auth/src/service/: auth_service.rs
auth/src/utils/: claim.rs  mod.rs  password.rs  redis.rs  session.rs
auth/static/key/: private_access_rsa_key.pem  private_refresh_rsa_key.pem
auth/utils/: Cargo.toml
auth/utils/src/: dir.rs
axum-casbin/: Cargo.toml
axum-casbin/src/: middleware.rs
axum-casbin/tests/: test_middleware.rs  test_middleware_domain.rs  test_set_enforcer.rs
customer/: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.bake  README.md  docker-compose.yml
customer/application/: Cargo.toml
customer/application/src/: lib.rs
customer/domain/: Cargo.toml
customer/domain/src/: lib.rs
customer/infrastructure/: Cargo.toml
customer/infrastructure/src/: lib.rs
customer/infrastructure/tests/: customer_repository_test.rs  db_test.rs  jwt_util_test.rs  mq_test.rs  password_util_test.rs  redis_test.rs
customer/interface/: Cargo.toml
customer/interface/src/: lib.rs
customer/logs/: app.log.2024-09-24  app.log.2024-09-25  app.log.2024-09-26  app.log.2024-09-27  app.log.2024-09-28  app.log.2024-09-29  app.log.2024-10-01  app.log.2024-10-02  app.log.2024-10-04  app.log.2024-10-05  app.log.2024-10-06  app.log.2024-10-09  app.log.2024-10-10  app.log.2024-10-11  app.log.2024-10-13  app.log.2024-10-17  app.log.2024-10-18  app.log.2024-10-20  app.log.2024-11-05  app.log.2024-11-06  app.log.2024-11-10  app.log.2024-11-11  app.log.2024-11-13  app.log.2024-11-16  app.log.2024-11-19  app.log.2024-11-20  app.log.2024-11-21  app.log.2024-11-25  app.log.2024-11-26  app.log.2024-11-27  app.log.2024-11-28  app.log.2024-11-29  app.log.2024-11-30  app.log.2024-12-26
customer/migration/: Cargo.toml
customer/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000002_create_table.rs  m20220101_000003_create_table.rs  m20220101_000004_create_table.rs  m20220101_000005_create_table.rs
customer/settings/: default.toml  development.toml  production.toml
customer/shared/: Cargo.toml
customer/shared/src/: constant.rs  error.rs  lib.rs  response.rs  strategy.rs  types.rs
customer/src/: main.rs
customer/static/key/: private_access_rsa_key.pem  private_refresh_rsa_key.pem  public_access_rsa_key.pem  public_refresh_rsa_key.pem
gateway/: Cargo.toml  README.md
gateway/src/: main.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000002_create_table.rs  m20220101_000003_create_table.rs  m20220101_000005_create_table.rs  m20220101_000006_create_table.rs  main.rs
migration/src/data/: m20241023_000001_insert_sys_domain.rs  m20241024_000002_insert_sys_user.rs  m20241024_000003_insert_sys_role.rs  m20241024_000007_insert_casbin_rule.rs  m20241024_000008_insert_product.rs  mod.rs
migration/src/schemas/: m20240815_000001_create_enum_status.rs  m20240815_000002_create_sys_user.rs  m20240815_000003_create_sys_user.rs  m20241023_000002_create_sys_domain.rs  m20241023_000004_create_sys_access_key.rs  m20241023_000005_create_sys_role.rs  m20241023_000006_create_sys_domain.rs  m20241023_000009_create_sys_menu.rs  m20241023_000011_create_sys_organization.rs  m20241023_000012_create_sys_role_menu.rs  m20241023_000014_create_sys_user_role.rs  m20241023_000015_create_event_streams.rs  m20241023_000016_create_order.rs  m20241023_000017_create_receive_address.rs  m20241023_000018_create_cart_item.rs  m20241023_000019_create_product.rs  mod.rs
product/: .env  .gitignore  Cargo.toml  README.md
product/application/: Cargo.toml
product/infrastructure/: Cargo.toml
product/infrastructure/src/: lib.rs
product/interface/: Cargo.toml
product/logs/: app.log.2024-12-20
product/settings/: development.toml
product/shared/: Cargo.toml
product/shared/src/: error.rs  lib.rs  reponse.rs
product/src/: main.rs
product/src/configure/: es.rs  mod.rs  profile.rs  redis.rs  tracing.rs
product/src/constant/: mod.rs
product/src/dto/: mod.rs  request.rs
product/src/error/: mod.rs
product/src/infrastructure/: mod.rs
product/src/routers/: mod.rs  product_router.rs  server.rs
product/src/server/: mod.rs
product/src/state/: mod.rs
product/src/utils/: dir.rs
server/api/: Cargo.toml
server/config/: Cargo.toml  README.md
server/config/src/: config.rs  database.rs  jwt.rs  kafka.rs  lib.rs  redis.rs
server/initialize/: Cargo.toml
server/initialize/src/: access_key_initialization.rs  admin_router_initialization.rs  casbin_initialization.rs  config_initialization.rs  db_initialization.rs  event_channel_initialization.rs  init_casbin.rs  init_config.rs  (+14 more)
server/middleware/: Cargo.toml
server/model/: Cargo.toml  README.md
server/service/: Cargo.toml
server/shared/: Cargo.toml  README.md
(+501 files in other folders)
