[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.25", features = ["derive"] }
tokio = "1"
async-trait = "0.1.42"
once_cell = "1"
pingora = { version = "0.1", features = ["lb"] }
pingora-core = { version = "0.4.0", default-features = false }
# pingora-http = { version = "0.4.0" }
# pingora-timeout = { version = "0.4.0" }
# pingora-load-balancing = { version = "0.4.0", optional = true, default-features = false }
# pingora-proxy = { version = "0.4.0", optional = true, default-features = false }
# pingora-cache = { version = "0.4.0", optional = true, default-features = false }
