[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

thiserror = { workspace = true }
bb8 = { workspace = true }
redis = { workspace = true }
bb8-redis = { workspace = true }
once_cell = { workspace = true }
config = { workspace = true }

tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
tracing-appender = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
