[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
serde_json = { workspace = true }
bb8-redis = { workspace = true }
sea-orm = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
utoipa = { workspace = true }
