[package]
authors.workspace = true
edition.workspace = true
name = "config"
publish.workspace = true
version.workspace = true

[dependencies]
shared = {path = "../shared"}

log = {workspace = true}
once_cell = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry-otlp = {workspace = true}
opentelemetry_sdk = {workspace = true}
rdkafka = {workspace = true}
redis = {workspace = true}
sea-orm = {workspace = true}
serde = {workspace = true}
strum = {workspace = true}
test-context = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
toml = {workspace = true}
tracing = {workspace = true}
tracing-appender = {workspace = true}
tracing-bunyan-formatter = {workspace = true}
tracing-log = {workspace = true}
tracing-opentelemetry = {workspace = true}
tracing-subscriber = {workspace = true}
serde_yaml = { workspace = true }
serde_json = { workspace = true }