[package]
authors.workspace = true
edition.workspace = true
name = "initialize"
publish.workspace = true
version.workspace = true

[dependencies]
axum-casbin = {path = "../../axum-casbin"}
config = {path = "../config"}
middleware = {path = "../middleware"}
model = {path = "../model"}
router = {path = "../router"}
sea-orm-adapter = {path = "../../sea-orm-adapter"}
service = {path = "../service"}
shared = {path = "../shared"}
xdb = {path = "../../xdb"}

axum = {workspace = true}
casbin = {workspace = true}
chrono = {workspace = true}
http = {workspace = true}
log = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry-otlp = {workspace = true}
opentelemetry_sdk = {workspace = true}
rdkafka = {workspace = true}
redis = {workspace = true}
sea-orm = {workspace = true}
tokio = {workspace = true}
tower = {workspace = true}
tower-http = {workspace = true}
tracing = {workspace = true}
tracing-appender = {workspace = true}
tracing-bunyan-formatter = {workspace = true}
tracing-log = {workspace = true}
tracing-opentelemetry = {workspace = true}
tracing-subscriber = {workspace = true}
tracing-error = { workspace = true }