[package]
authors.workspace = true
edition.workspace = true
name = "middleware"
publish.workspace = true
version.workspace = true

[dependencies]
axum-casbin = {path = "../../axum-casbin"}
config = {path = "../config"}
shared = {path = "../shared"}

axum = {workspace = true}
chrono = {workspace = true}
headers = {workspace = true}
jsonwebtoken = {workspace = true}
ulid = {workspace = true}
serde = {workspace = true}