[package]
authors.workspace = true
edition.workspace = true
name = "service"
publish.workspace = true
version.workspace = true

[dependencies]
model = {path = "../model"}
shared = {path = "../shared"}
axum-casbin = { path = "../../axum-casbin" }

async-trait = {workspace = true}
chrono = {workspace = true}
redis = {workspace = true}
sea-orm = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
ulid = {workspace = true}
