[package]
authors.workspace = true
edition.workspace = true
name = "shared"
publish.workspace = true
version.workspace = true

[dependencies]
argon2 = {workspace = true}
async-trait = {workspace = true}
axum = {workspace = true}
axum-extra = {workspace = true}
base64 = {workspace = true}
bytes = {workspace = true}
chrono = {workspace = true}
config = {workspace = true}
fake = {workspace = true}
form_urlencoded = {workspace = true}
futures = {workspace = true}
hex = {workspace = true}
http = {workspace = true}
jsonwebtoken = {workspace = true}
lazy_static = {workspace = true}
lettre = {workspace = true}
md-5 = {workspace = true}
mime = {workspace = true}
moka = {workspace = true}
once_cell = {workspace = true}
parking_lot = {workspace = true}
rdkafka = {workspace = true}
redis = {workspace = true}
reqwest = {workspace = true}
ring = {workspace = true}
sea-orm = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
strum = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tokio-tungstenite = {workspace = true}
tower = {workspace = true}
tracing = {workspace = true}
ulid = {workspace = true}
urlencoding = {workspace = true}
validator = {workspace = true}
rayon = {workspace = true}
